Make `DeploymentClass` argument a string for http endpoints (#45486)
GitOrigin-RevId: acf8fbca74d1192c536c62e56ebcdc8eb44924a2
