# npm-packages/@convex-dev/platform/management-openapi.json
@@ -555,14 +555,6 @@
           "prod"
         ]
       },
-      "DeploymentClass": {
-        "type": "string",
-        "enum": [
-          "s16",
-          "s256",
-          "d1024"
-        ]
-      },
       "DeploymentType": {
         "type": "string",
         "enum": [
@@ -612,13 +604,9 @@
         ],
         "properties": {
           "class": {
-            "oneOf": [
-              {
-                "type": "null"
-              },
-              {
-                "$ref": "#/components/schemas/DeploymentClass"
-              }
+            "type": [
+              "string",
+              "null"
             ]
           },
           "region": {
@@ -638,13 +626,9 @@
         ],
         "properties": {
           "deploymentClass": {
-            "oneOf": [
-              {
-                "type": "null"
-              },
-              {
-                "$ref": "#/components/schemas/DeploymentClass"
-              }
+            "type": [
+              "string",
+              "null"
             ]
           },
           "deploymentRegion": {
